--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>React Skeleton</title>
   </head>
   <body>
+    <!-- Comments -->
     <div id="main"></div>
     <script type="text/javascript" src="bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
