--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <body>
     <!-- Comments -->
     <div id="main"></div>
+    <!-- comment 1 -->
     <script type="text/javascript" src="bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
