--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <!-- Comments -->
     <div id="main"></div>
     <!-- comment 1 -->
+    <!-- comment 2 -->
     <script type="text/javascript" src="bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
