--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <div id="main"></div>
     <!-- comment 1 -->
     <!-- comment 2 -->
+    <!-- comment 3 -->
     <script type="text/javascript" src="bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
